prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: elearning-ingress
    namespace: ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: external-clusterip-api
                          port:
                              number: 3000
